test/TestPhases/typechecker/invalid/valueReturnedFromVoidFunction.blc
function rrr(a: bool)
    
    if a then
        return 5
    else // wait once more
    
    end
    
end

@[EntryPoint]
activity start ()()
    rrr(true)
    await true
end